<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/border_box">

    <!-- Popup Title -->
    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/popup_title"/>

    <!-- Existing Event Subtitle -->
    <TextView
        android:id="@+id/popup_subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_title"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/popup_subtitle_1" />

    <!-- Existing Event 1 -->
    <Button
        android:id="@+id/popup_event_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_subtitle_1"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/popup_event_1"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/grey" />
    <Button
        android:id="@+id/event_dist_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_subtitle_1"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:gravity="right|center_vertical"
        android:layout_alignParentRight="true"
        android:text="@string/popup_event_dist"
        android:backgroundTint="@color/grey" />

    <!-- Existing Event 2 -->
    <Button
        android:id="@+id/popup_event_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_1"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/popup_event_2"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/grey"/>
    <Button
        android:id="@+id/event_dist_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_1"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:gravity="right|center_vertical"
        android:layout_alignParentRight="true"
        android:text="@string/popup_event_dist"
        android:backgroundTint="@color/grey"/>

    <!-- Existing Event 3 -->
    <Button
        android:id="@+id/popup_event_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_2"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/popup_event_3"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/grey"/>
    <Button
        android:id="@+id/event_dist_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_2"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:gravity="right|center_vertical"
        android:layout_alignParentRight="true"
        android:text="@string/popup_event_dist"
        android:backgroundTint="@color/grey"/>

    <!-- Existing Event 4 -->
    <Button
        android:id="@+id/popup_event_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_3"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/popup_event_4"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/grey"/>
    <Button
        android:id="@+id/event_dist_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_3"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:gravity="right|center_vertical"
        android:layout_alignParentRight="true"
        android:text="@string/popup_event_dist"
        android:backgroundTint="@color/grey"/>

    <!-- Existing Event 5 -->
    <Button
        android:id="@+id/popup_event_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_4"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:text="@string/popup_event_5"
        android:gravity="left|center_vertical"
        android:backgroundTint="@color/grey"/>
    <Button
        android:id="@+id/event_dist_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_4"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:gravity="right|center_vertical"
        android:layout_alignParentRight="true"
        android:text="@string/popup_event_dist"
        android:backgroundTint="@color/grey"/>

    <!-- Confirmation Subtitle -->
    <TextView
        android:id="@+id/popup_subtitle_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_event_5"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/popup_subtitle_2" />

    <!-- Yes button -->
    <Button
        android:id="@+id/popup_button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_subtitle_2"
        android:textSize="12sp"
        android:backgroundTint="@color/green"
        android:text="@string/popup_button_yes"
        android:layout_marginRight="10dp"/>

    <!-- No button -->
    <Button
        android:id="@+id/popup_button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popup_subtitle_2"
        android:layout_toRightOf="@id/popup_button_yes"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:backgroundTint="@color/black"
        android:text="@string/popup_button_no" />
    </RelativeLayout>
</RelativeLayout>